input for categories, no binding yet

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -18,6 +18,10 @@
         <h2>Properties</h2>
         <div id="settle-category-properties">
             <div class="form-group">
+                <label>ID</label>
+                <input class="form-control" type="text" disabled name="category_id" value="" />
+            </div>
+            <div class="form-group">
                 <label>Category Title</label>
                 <input class="form-control" type="text" name="category_name" value="" />
             </div>
