--- a/templates/search.mustache
+++ b/templates/search.mustache
@@ -1,7 +1,7 @@
 <div id="country-search-wrapper">
 
 <p>
-    Please select a country below.
+    Please select a country below or see <a href="#">full list of categories</a>.
 </p>
 
 <div class="row">
