--- a/templates/search_categories.mustache
+++ b/templates/search_categories.mustache
@@ -1,5 +1,7 @@
 <div id="country-search-wrapper">
 
+<h3>{{ country_text }}</h3>
+
 <p>
     Please select a category below.
     Only categories that contain at least one article are displayed.
@@ -7,8 +9,93 @@
 
 <div class="row">
 
-    {{& categories_html }}
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        {{& categories_html }}
+    </div>
 
 </div>
+
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+        <div class="panel panel-info">
+
+            <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Collapsible Group Item #1
+                    </a>
+                </h4>
+            </div>
+
+            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+
+                <div class="panel-body">
+
+                    <ul>
+                        <li>a</li>
+                        <li>b</li>
+                        <li>c</li>
+                        <li>d</li>
+                        <li>e</li>
+                    </ul>
+
+                    <div class="panel-group" id="accordion_inner" role="tablist" aria-multiselectable="true">
+
+                        <div class="panel panel-info">
+                            <div class="panel-heading" role="tab" id="headingOne_inner">
+                                <h4 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion_inner" href="#collapseOne_inner" aria-expanded="true" aria-controls="collapseOne">
+                                        Collapsible Group Item Inner
+                                    </a>
+                                </h4>
+                            </div>
+
+                            <div id="collapseOne_inner" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body">
+
+                                    <ul>
+                                        <li>a</li>
+                                        <li>b</li>
+                                        <li>c</li>
+                                        <li>d</li>
+                                        <li>e</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="panel panel-info">
+            <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Collapsible Group Item #2
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+
+                    <ul>
+                        <li>a</li>
+                        <li>b</li>
+                        <li>c</li>
+                        <li>d</li>
+                        <li>e</li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 </div>
