--- a/templates/search_categories_category.mustache
+++ b/templates/search_categories_category.mustache
@@ -1,21 +1,24 @@
 <div class="panel panel-info">
     <div class="panel-heading" role="tab" id="category_{{id}}">
         <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse_{{id}}" aria-expanded="false" aria-controls="#collapse_{{id}}">
-                Collapsible Group Item #2
+            <a class="collapsed" role="button" data-toggle="collapse" href="#collapse_{{id}}" aria-expanded="false" aria-controls="#collapse_{{id}}">
+                {{ title }}
+                {{# articles_count }}
+                    <span class="label label-success">{{ . }}</span>
+                {{/ articles_count }}
             </a>
         </h4>
     </div>
-    <div id="#collapse_{{id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapse_{{id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
         <div class="panel-body">
 
             <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
-                <li>e</li>
+            {{# articles }}
+                <li><a target="_blank" href="{{url}}">{{title}}</a></li>
+            {{/ articles}}
             </ul>
+
+            {{& innerHtml }}
 
         </div>
     </div>
