+ page title for category search

--- a/modules/ext.SettleGeoCategories.search.css
+++ b/modules/ext.SettleGeoCategories.search.css
@@ -2,6 +2,10 @@
 
 }
 
+#country-search-wrapper .panel {
+    animation: none;
+}
+
 #country-search-wrapper ol.breadcrumb {
     padding-left: 0;
 }
