+ changed layout UI to 3 steps - important: limitation for 3 levels hierarchy

--- a/modules/ext.SettleGeoCategories.search.css
+++ b/modules/ext.SettleGeoCategories.search.css
@@ -29,3 +29,23 @@
 #country-search-wrapper .panel ul {
     margin-bottom: 0;
 }
+
+#country-search-wrapper ul.primary-list-block li {
+    line-height: 22px;
+    margin: 5px 0;
+}
+
+#country-search-wrapper ul.primary-list-block li {
+    list-style: none;
+}
+
+#country-search-wrapper ul.primary-list-block i {
+    font-size: 12px;
+    color: rgba(63, 181, 55, 0.25);
+    padding-right: 5px;
+}
+
+#country-search-wrapper .country-outline-item li.no-articles,
+#country-search-wrapper .country-outline-item li.no-articles a {
+    color: lightgrey;
+}
