--- a/templates/search_categories.mustache
+++ b/templates/search_categories.mustache
@@ -20,19 +20,45 @@
 
     <p>{{& top_text }}</p>
 
-    <ul class="primary-list-block">
-        {{# categories }}
-            <li>
-                <i class="glyphicon glyphicon-{{ icon }}"></i>
-                <a href="{{ link }}">
-                    {{ title }}
-                </a>
-                {{# desc }}
-                    <span class="text-muted">{{ . }}</span>
-                {{/ desc}}
-            </li>
-        {{/ categories }}
-    </ul>
+    {{^ layout_articles }}
+        <!-- Normal layout for categories -->
+        <ul class="primary-list-block">
+            {{# categories }}
+                <li>
+                    <i class="glyphicon glyphicon-{{ icon }}"></i>
+                    <a href="{{ link }}">
+                        {{ title }}
+                    </a>
+                    {{# desc }}
+                        <span class="text-muted">{{ . }}</span>
+                    {{/ desc}}
+                </li>
+            {{/ categories }}
+        </ul>
+    {{/ layout_articles}}
+    {{# layout_articles }}
+        <!-- Special layout for articles -->
+        <div class="row" id="panel-categories-articles-items">
+            {{# categories }}
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="glyphicon glyphicon-file pull-left"></i>
+                            <a href="{{ link }}">{{ title }}</a>
+                        </div>
+                        <div class="panel-heading">
+                            <i class="glyphicon glyphicon-marker pull-left"></i>
+                            {{& location_text }}
+                        </div>
+                        <div class="panel-body">
+                            {{# desc }}{{ . }}{{/ desc }}
+                            {{^ desc }}—{{/ desc}}
+                        </div>
+                    </div>
+                </div>
+            {{/ categories }}
+        </div>
+    {{/layout_articles}}
 
     {{/ have_results }}
     {{^ have_results }}
