--- a/templates/search_categories.mustache
+++ b/templates/search_categories.mustache
@@ -47,7 +47,7 @@
                             <a href="{{ link }}">{{ title }}</a>
                         </div>
                         <div class="panel-heading">
-                            <i class="glyphicon glyphicon-marker pull-left"></i>
+                            <i class="glyphicon glyphicon-map-marker pull-left"></i>
                             {{& location_text }}
                         </div>
                         <div class="panel-body">
