--- a/templates/search_categories.mustache
+++ b/templates/search_categories.mustache
@@ -24,7 +24,7 @@
         <!-- Normal layout for categories -->
         <ul class="primary-list-block">
             {{# categories }}
-                <li>
+                <li class="animated fadeInUp" style="opacity: 0;">
                     <i class="glyphicon glyphicon-{{ icon }}"></i>
                     <a href="{{ link }}">
                         {{ title }}
@@ -41,7 +41,7 @@
         <div class="row" id="panel-categories-articles-items">
             {{# categories }}
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default animated fadeInUp" style="opacity: 0;">
                         <div class="panel-heading">
                             <i class="glyphicon glyphicon-file pull-left"></i>
                             <a href="{{ link }}">{{ title }}</a>
