--- a/modules/ext.SettleGeoCategories.search.css
+++ b/modules/ext.SettleGeoCategories.search.css
@@ -124,6 +124,7 @@
     color: white;
     padding: 5px 10px;
     cursor: pointer;
+    margin-bottom: 5px;
 }
 
 .country-search-ajax #csw-items .csw-category-item:hover {
@@ -139,6 +140,7 @@
     color: white;
     padding: 5px 10px;
     cursor: pointer;
+    margin-bottom: 5px;
 
     /*background-color: white;*/
     /*border: 1px solid #5a93b9;*/
