--- a/templates/sub_category_item.ajax.mustache
+++ b/templates/sub_category_item.ajax.mustache
@@ -2,6 +2,6 @@
     <div class="csw-sub-category-item">
         <i class="glyphicon glyphicon-tag"></i>
         {{ text }}
-        <!--<span class="label label-party">{{ count }}</span>-->
+        {{# count }}<span class="csw-count">{{ count }}</span>{{/count}}
     </div>
 </div>
