--- a/templates/category_item.ajax.mustache
+++ b/templates/category_item.ajax.mustache
@@ -2,6 +2,6 @@
     <div class="csw-category-item">
         <i class="glyphicon glyphicon-tags"></i>
         {{ text }}
-        <span class="csw-count">{{ count }}</span>
+        {{# count }}<span class="csw-count">{{ count }}</span>{{/count}}
     </div>
 </div>
