--- a/modules/ext.SettleGeoCategories.search.css
+++ b/modules/ext.SettleGeoCategories.search.css
@@ -216,7 +216,11 @@
 }
 
 span.csw-count {
-    padding: 0 3px;
-    color: rgba(255, 255, 255, 0.55);
+    padding: 2px 4px;
+    color: #64bb5d;
+    margin-left: 4px;
+    font-size: 12px;
     font-weight: 300;
+    background-color: rgba(255, 255, 255, 0.88);
+    border-radius: 2px;
 }
