--- a/templates/category_item.ajax.mustache
+++ b/templates/category_item.ajax.mustache
@@ -1,7 +1,4 @@
-<div class="col-md-3">
-    <div class="csw-category-item">
-        <i class="glyphicon glyphicon-tags"></i>
-        {{ text }}
-        {{# count }}<span class="csw-count">{{ count }}</span>{{/count}}
-    </div>
+<div class="csw-category-item">
+    {{ text }}
+    <!--{{# count }}<span class="csw-count">{{ count }}</span>{{/count}}-->
 </div>
