--- a/templates/ajax_article.mustache
+++ b/templates/ajax_article.mustache
@@ -1,16 +1,26 @@
-<div class="col-md-3 col-sm-6 col-xs-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <i class="glyphicon glyphicon-file pull-left"></i>
-            <a href="{{ link }}">{{ title }}</a>
-        </div>
-        <div class="panel-heading">
-            <i class="glyphicon glyphicon-map-marker pull-left"></i>
-            {{& location_text }}
-        </div>
-        <div class="panel-body">
-            {{# desc }}{{ . }}{{/ desc }}
-            {{^ desc }}—{{/ desc}}
-        </div>
-    </div>
+<div class="col-xs-12">
+
+	<div class="row sgs-new-search-result-item">
+		<div class="col-sm-3 sgs-new-col-left">
+			<div class="sgs-new-userpic">
+				<a class="sgs-userpic-wrapper" href="{{& userlink }}" title="{{ page_author }}">
+					<img src="{{ page_author_image }}" />
+				</a>
+				<span>{{ page_author }}</span>
+			</div>
+		</div>
+		<div class="col-sm-9 sgs-new-col-right">
+			<div class="sgs-new-col-title">
+				<a href="{{& link }}">{{ title }}</a>
+			</div>
+<!--			<div class="sgs-new-col-subtitle">
+				{{& location_text }}
+			</div>-->
+			<div class="sgs-new-col-description">
+				{{# desc }}{{ . }}{{/ desc }}
+				{{^ desc }}—{{/ desc}}
+			</div>
+		</div>
+	</div>
+
 </div>
