--- a/templates/sub_category_item.ajax.mustache
+++ b/templates/sub_category_item.ajax.mustache
@@ -1,7 +1,4 @@
-<div class="col-md-2">
-    <div class="csw-sub-category-item">
-        <i class="glyphicon glyphicon-tag"></i>
-        {{ text }}
-        {{# count }}<span class="csw-count">{{ count }}</span>{{/count}}
-    </div>
+<div class="csw-sub-category-item">
+    {{ text }}
+    <!-- {{# count }}<span class="csw-count">{{ count }}</span>{{/count}} -->
 </div>
