--- a/templates/sub_category_item.ajax.mustache
+++ b/templates/sub_category_item.ajax.mustache
@@ -1,4 +1,4 @@
 <div class="csw-sub-category-item">
     {{ text }}
-    <!-- {{# count }}<span class="csw-count">{{ count }}</span>{{/count}} -->
+    {{# count }}<span class="csw-count label label-success pull-right">{{ count }}</span>{{/count}}
 </div>
