--- a/modules/ext.SettleGeoCategories.search.css
+++ b/modules/ext.SettleGeoCategories.search.css
@@ -217,6 +217,12 @@ span.csw-count {
     border-radius: 2px;
 }*/
 
+span.csw-count {
+    position: relative;
+    top: 2px;
+    line-height: 12px;
+}
+
 .sgs-new-search-result-item {
     padding-left: 15px;
     margin-bottom: 15px;
