--- a/templates/category_item.ajax.mustache
+++ b/templates/category_item.ajax.mustache
@@ -1,4 +1,4 @@
 <div class="csw-category-item">
     {{ text }}
-    <!--{{# count }}<span class="csw-count">{{ count }}</span>{{/count}}-->
+	{{# count }}<span class="csw-count label label-info pull-right">{{ count }}</span>{{/count}}
 </div>
